--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
+      - name: prepare environment
+        run: |
+          go env -w GOPROXY=https://proxy.golang.org,direct
+          cd ${{ env.BRANCH }} && go mod download
+
       - name: Linters
         uses: golangci/golangci-lint-action@v3
         with:
@@ -44,6 +49,11 @@ jobs:
 
       - name: Check out code
         uses: actions/checkout@v3
+
+      - name: prepare environment
+        run: |
+          go env -w GOPROXY=https://proxy.golang.org,direct
+          cd ${{ env.BRANCH }} && go mod download
 
       - name: Unit tests
         run: go test -v -count=1 -race -timeout=1m ./...
