--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -72,6 +72,10 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
+      - name: Install lint dependencies
+        run: make install-lint-deps
+        working-directory: hw12_13_14_15_16_calendar
+
       - name: make lint
         run: make lint
         working-directory: hw12_13_14_15_16_calendar
