update linter version v1.50.1

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,7 +3,6 @@ run:
   build-tags:
     - bench
     - !bench
-  go: '1.25'
 
 linters-settings:
   funlen:
@@ -35,6 +34,7 @@ linters:
     - gci
     - gocognit
     - goconst
+    - gocritic
     - gocyclo
     - godot
     - gofmt
