HW13 is completed

--- a/hw12_13_14_15_16_calendar/Makefile
+++ b/hw12_13_14_15_16_calendar/Makefile
@@ -31,9 +31,19 @@ install-lint-deps:
 lint: install-lint-deps
 	golangci-lint run ./...
 
+# Генерация API кода из OpenAPI спецификации
+gen-api: install-gen-deps
+	@echo "Generating API code from OpenAPI specification..."
+	@which oapi-codegen > /dev/null || (echo "oapi-codegen not installed. Run: go install github.com/deepmap/oapi-codegen/cmd/oapi-codegen@v1.16.3" && exit 1)
+	cd api && oapi-codegen -package api -generate types,models openapi.yaml > generated.go
+	@echo "API code generated successfully"
+
+install-gen-deps:
+	go install github.com/deepmap/oapi-codegen/cmd/oapi-codegen@v1.16.3
+
 migrate:
 	@echo "Applying migrations..."
 	@which goose > /dev/null || (echo "goose not installed. Run: go install github.com/pressly/goose/v3/cmd/goose@latest" && exit 1)
 	cd migrations && goose postgres "postgres://calendar:calendar@localhost:5432/calendar?sslmode=disable" up
 
-.PHONY: build run build-img run-img version test install-lint-deps lint migrate
+.PHONY: build run build-img run-img version test install-lint-deps lint migrate gen-api install-gen-deps
